Display Previous Clinic Records added

--- a/Frontend/src/app/MOHComponents/clinic-records/clinic-records.component.html
+++ b/Frontend/src/app/MOHComponents/clinic-records/clinic-records.component.html
@@ -31,7 +31,7 @@
                               </th>
                           </thead>
                           <tbody>
-                              <tr *ngFor="let clinicRecord of clinicsRecords">
+                              <tr *ngFor="let clinic of clinics">
                                   <td>
                                       {{clinic.clinic_id  }}
                                   </td>
