Final Changes Added

--- a/Frontend/src/app/MOHComponents/phm-daily-reports/phm-daily-reports.component.html
+++ b/Frontend/src/app/MOHComponents/phm-daily-reports/phm-daily-reports.component.html
@@ -180,7 +180,7 @@
                           </div> -->
                           <div class="col-md-6">
                             <mat-form-field class="example-full-width">
-                              <input matInput placeholder="{{'phm.No_of_house_walking'| translate}}" type= "number" formControlName="No_of_house_walking">
+                              <input matInput placeholder="{{'phm.No_of_house_walking'| translate}}" type= "number" formControlName="No_of_new_married_couple">
                             </mat-form-field>
                           </div>
                         </div>
