--- a/Frontend/src/app/dashboard/dashboard.component.html
+++ b/Frontend/src/app/dashboard/dashboard.component.html
@@ -11,9 +11,9 @@
                 <div class="row">
                  
                   <div class="col-md-12 mb-4 white-text text-center">
-                    <h1  data-wow-delay="0.3s"><strong>eMOH KESBEWA</strong></h1>
+                    <h1  class="text-dark" data-wow-delay="0.3s"><strong>eMOH KESBEWA</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                    <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>For a healthier nation that contributes to its economic, social, mental and spiritual development</strong></h5>
+                    <h5 class="text-uppercase mb-4 text-dark wow fadeInDown" data-wow-delay="0.4s"><strong>For a healthier nation that contributes to its economic, social, mental and spiritual development</strong></h5>
                     <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong></strong></h5>
                     <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong></strong></h5>
                     <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong></strong></h5>
