Errors  corrected for production

--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -9,7 +9,7 @@
                     <p class="card-category"></p>
                 </div>
                 <div class="card-body">
-                    <form [formGroup]="approvedFamilyForm" [hidden]="success" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="approvedFamilyForm" (ngSubmit)="onSubmit()">
                       <mat-expansion-panel>
                         <mat-expansion-panel-header>
                           <mat-panel-title>
