--- a/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
+++ b/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
@@ -7,7 +7,7 @@
                    
                 </div>
                 <div class="card-body">
-                    <form [formGroup]="WeightHeightForm" [hidden]="success" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="WeightHeightForm" (ngSubmit)="onSubmit()">
                         
                         <div class="row">
                           <div class="col-md-3">
