--- a/Frontend/src/app/MOHComponents/phm-daily-reports/phm-daily-reports.component.html
+++ b/Frontend/src/app/MOHComponents/phm-daily-reports/phm-daily-reports.component.html
@@ -51,7 +51,7 @@
                   <h4 class="card-title">{{'phm.dailyUpdateForm'| translate}}</h4>
               </div>
               <div class="card-body">
-                  <form [formGroup]="phmForm" [hidden]="success" (ngSubmit)="onSubmit()">
+                  <form [formGroup]="phmForm" (ngSubmit)="onSubmit()">
                     <div class="1st_page">
                       <!--start 1st page-->
                       <div class="1st_field">
