--- a/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
+++ b/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
@@ -16,7 +16,7 @@
                     <p class="card-category"></p>
                 </div>
                 <div class="card-body">
-                    <form [formGroup]="BabyForm" [hidden]="success" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="BabyForm" (ngSubmit)="onSubmit()">
                       <mat-expansion-panel>
                         <mat-expansion-panel-header>
                           <mat-panel-title>
