--- a/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
+++ b/Frontend/src/app/MOHComponents/view-mother-by-id/view-mother-by-id.component.html
@@ -37,16 +37,16 @@
                             <div class="col-md-2">
                                 <mat-form-field class="example-full-width">
                                     <input matInput placeholder="{{'mother.mother_id'| translate}}" type="text" readonly="{{onChange()}}" formControlName="mother_id">
-                                    <div *ngIf="submit && addMotherSchema.controls.mother_id.errors" class="error">
-                                        <div *ngIf="addMotherSchema.controls.mother_id.errors.required">This field is required</div>
+                                    <div *ngIf="addMotherForm.controls.mother_id.errors" class="error">
+                                        <div *ngIf="addMotherForm.controls.mother_id.errors.required">This field is required</div>
                                     </div>
                                 </mat-form-field>
                             </div>
                             <div class="col-md-3">
                               <mat-form-field class="example-full-width">
                                   <input matInput placeholder="{{'mother.mothers_name'| translate}}" type="text" readonly="{{onChange()}}" formControlName="mothers_name">
-                                  <div *ngIf="submit && addMotherSchema.controls.mothers_name.errors" class="error">
-                                      <div *ngIf="addMotherSchema.controls.mothers_name.errors.required">This field is required</div>
+                                  <div *ngIf="addMotherForm.controls.mothers_name.errors" class="error">
+                                      <div *ngIf="addMotherForm.controls.mothers_name.errors.required">This field is required</div>
                                   </div>
                               </mat-form-field>
                             </div>
@@ -66,16 +66,16 @@
                                 <div class="col-md-3">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="{{'mother.registration_no'| translate}}" type="text"readonly="{{onChange()}}" formControlName="registration_no">
-                                        <div *ngIf="submit && addMotherSchema.controls.registration_no.errors" class="error">
-                                            <div *ngIf="addMotherSchema.controls.registration_no.errors.required">This field is required</div>
+                                        <div *ngIf="addMotherForm.controls.registration_no.errors" class="error">
+                                            <div *ngIf="addMotherForm.controls.registration_no.errors.required">This field is required</div>
                                         </div>
                                     </mat-form-field>
                             </div>
                             <div class="col-md-3">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="{{'mother.registration_date'| translate}}" type="date" readonly="{{onChange()}}" formControlName="registration_date">
-                                        <div *ngIf="submit && addMotherSchema.controls.registration_date.errors" class="error">
-                                            <div *ngIf="addMotherSchema.controls.registration_date.errors.required">This field is required</div>
+                                        <div *ngIf="addMotherForm.controls.registration_date.errors" class="error">
+                                            <div *ngIf="addMotherForm.controls.registration_date.errors.required">This field is required</div>
                                         </div>
                                     </mat-form-field>
                             </div> -->
@@ -88,8 +88,8 @@
                                   <div class="col-md-2">
                                           <mat-form-field class="example-full-width">
                                               <input matInput placeholder="{{'mother.age'| translate}}" type="number" readonly="{{onChange()}}" formControlName="age" min="0" max="45">
-                                              <div *ngIf="submit && addMotherSchema.controls.age.errors" class="error">
-                                                  <div *ngIf="addMotherSchema.controls.age.errors.required">This field is required</div>
+                                              <div *ngIf="addMotherForm.controls.age.errors" class="error">
+                                                  <div *ngIf="addMotherForm.controls.age.errors.required">This field is required</div>
                                               </div>
                                           </mat-form-field>
                                   </div>
@@ -98,8 +98,8 @@
                                   <div class="col-md-3">
                                           <mat-form-field class="example-full-width">
                                               <input matInput placeholder="{{'mother.no_of_living_children'| translate}}" type="number" readonly="{{onChange()}}" formControlName="no_of_living_children" min="0">
-                                              <div *ngIf="submit && addMotherSchema.controls.no_of_living_children.errors" class="error">
-                                                  <div *ngIf="addMotherSchema.controls.no_of_living_children.errors.required">This field is required</div>
+                                              <div *ngIf="addMotherForm.controls.no_of_living_children.errors" class="error">
+                                                  <div *ngIf="addMotherForm.controls.no_of_living_children.errors.required">This field is required</div>
                                               </div>
                                           </mat-form-field>
                                   </div>
