--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -15,7 +15,7 @@
         <mat-card-title>Login</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
       </mat-card-header>
-      <form [formGroup]="loginForm" [hidden]="success" (ngSubmit)="onSubmit()">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <mat-form-field class="example-full-width">
             <input matInput placeholder="Email" type="text" formControlName="username">
           </mat-form-field>
